--- a/src/cssComponents/About.css
+++ b/src/cssComponents/About.css
@@ -5,7 +5,6 @@
 .bgImgContainers
 {
     position: absolute;
-    overflow: hidden;
     width: 100vw;
     height: 100vh;
     /* z-index: -1; */
